# vecmathpy

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/vecmath/: matrix4.hpp  vecmath.h  vector3.hpp
pycpp/: __init__.py  main.py  setup.py
src/: CMakeLists.txt
src/vecmath/: matrix4.cpp  vecmath.cpp  vector3.cpp
vecmathpy/: __init__.py  main.py  setup.py
